# image-coffee-utils

./: .dockerignore  .gitignore  Dockerfile  README.md  build  build.cmd  build.sh  docker-compose.yml  image-coffee-utils.sln  pom.xml  remove-image-container.cmd  remove-images-containers.cmd  remove-images-containers.sh  run-dev  run-dev.cmd  run-dev.sh  run-prod-as-test.cmd  run-prod.cmd  run-prod.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: deploy_api.yml
image-coffee-utils-colors/: .dockerignore  Dockerfile  app.py  banner.txt  pyproject.toml  requirements.txt
image-coffee-utils-colors/colors/: __init__.py
image-coffee-utils-colors/colors/adapter/in_/: __init__.py  controller.py  response.py
image-coffee-utils-colors/colors/application/: __init__.py  service.py
image-coffee-utils-colors/colors/application/port/: __init__.py  in_.py
image-coffee-utils-colors/colors/domain/: __init__.py  model.py  query.py
image-coffee-utils-colors/routes/: __init__.py
image-coffee-utils-colors/spring_cloud/: __init__.py  config_client.py  eureka_client.py  spring_config.py
image-coffee-utils-colors/tests/: __init__.py
image-coffee-utils-config/: pom.xml
image-coffee-utils-crop/: Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  image-coffee-utils-crop.csproj
image-coffee-utils-eureka/: pom.xml
image-coffee-utils-gateway/: pom.xml
image-coffee-utils-invert-colors/: Program.cs  banner.txt  pom.xml
image-coffee-utils-java-shared/: pom.xml
image-coffee-utils-resize/: .dockerignore  pom.xml
image-coffee-utils-ui/: pom.xml
image-coffee-utils-ui - copia/: pom.xml
(+155 files in other folders)
