[tool.poetry]
name = "image-coffee-utils-colors"
version = "0.0.1"
description = "Colors utilities for Image Coffee Utils."
authors = ["Martin Alexander Ramos Yampufé <alexanderamsyam@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.115.2"
py-eureka-client = "^0.11.10"
config-client = "^1.4.0"
uvicorn = "^0.32.0"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
